[package]
name = "rsl10-pac"
version = "0.0.2"
authors = ["Luciano Di Cocco <lu.dicocco@gmail.com>"]
edition = "2018"

description   = "Peripheral access API for the RSL10 microcontroller (generated using svd2rust)"
documentation = "https://docs.rs/rsl10-pac"
repository    = "https://github.com/ldicocco/rsl10-pac"
license       = "MIT"

readme        = "README.md"
categories    = ["embedded", "hardware-support", "no-std"]
keywords      = ["arm", "cortex-m", "rsl10", "svd2rust"]

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.12"

[features]
rt = ["cortex-m-rt", "cortex-m-rt/device"]